--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="../aufgabe_2/portfolio.html">Link zu Aufgabe 2</a>
 	<br>
 	<a href="../aufgabe_1_und_2/portfolio.html">Link zu Aufgabe 1</a>
 </body>
