--- a/aufgabe_2/about_me.html
+++ b/aufgabe_2/about_me.html
@@ -12,7 +12,7 @@
     <nav> 
         <ul>
             <li><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
-            
+            <li><a href="about_me.html" title="About Me">About Me</a></li>
             <li><a href="contact.html" title="contact">contact</a></li>
 
         </ul>
