--- a/aufgabe_2/contact.html
+++ b/aufgabe_2/contact.html
@@ -10,7 +10,7 @@
         <a id="oben"/> 
         <nav> 
             <ul>
-                
+                <li><a href="portfolio.html" title="Portfolio">Portfolio</a></li>
                 <li><a href="about_me.html" title="About Me">About Me</a></li>
                 <li><a href="contact.html" title="contact">contact</a></li>
 
