--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,8 +12,12 @@ body {
 </style>
 </head>
 <body>
+	<a href="../aufgabe_3/portfolio.html">Link zu Aufgabe 3</a>
+	<br>
 	<a href="../aufgabe_2/portfolio.html">Link zu Aufgabe 2</a>
 	<br>
 	<a href="../aufgabe_1_und_2/portfolio.html">Link zu Aufgabe 1</a>
+	
+
 </body>
 </html>
