--- a/aufgabe_3/portfolio.html
+++ b/aufgabe_3/portfolio.html
@@ -4,6 +4,7 @@
         <title>Portfolio Gaia Galli</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=800px, initial-scale=1.0">
 
     </head>
 
