--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,11 +12,13 @@ body {
 </style>
 </head>
 <body>
-	<a href="../aufgabe_3/portfolio.html" target="_blank">Link zu Aufgabe 3</a>
+	<a href="../aufgabe_4/steckbrief_unterseite.html" target="_blank">Aufgabe </a>
 	<br>
-	<a href="../aufgabe_2/portfolio.html" target="_blank">Link zu Aufgabe 2</a>
+	<a href="../aufgabe_3/portfolio.html" target="_blank">Aufgabe 3</a>
 	<br>
-	<a href="../aufgabe_1_und_2/portfolio.html" target="_blank">Link zu Aufgabe 1</a>
+	<a href="../aufgabe_2/portfolio.html" target="_blank">Aufgabe 2</a>
+	<br>
+	<a href="../aufgabe_1_und_2/portfolio.html" target="_blank">Aufgabe 1</a>
 	
 
 </body>
