--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="../aufgabe_4/steckbrief_unterseite.html" target="_blank">Aufgabe </a>
+	<a href="../aufgabe_4/steckbrief_unterseite.html" target="_blank">Aufgabe 4</a>
 	<br>
 	<a href="../aufgabe_3/portfolio.html" target="_blank">Aufgabe 3</a>
 	<br>
