--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="../aufgabe_7/drumpad.html" target="_blank">Aufgabe 7</a>
+	<br>
 	<a href="../aufgabe_6/emission.html" target="_blank">Aufgabe 6</a>
 	<br>
 	<a href="../aufgabe_5/emission.html" target="_blank">Aufgabe 5</a>
