--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="../aufgabe_7/drumpad.html" target="_blank">Aufgabe 7</a>
+	<a href="../aufgabe_7/drumpad.html" target="_blank">Aufgabe 7</a> <a href="../aufgabe_7/flowchart.pdf" target="_blank">Flowchart</a>
 	<br>
 	<a href="../aufgabe_6/emission.html" target="_blank">Aufgabe 6</a>
 	<br>
