Aufgabe 9 und Flowchart

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,10 @@
     </head>
     <body>
 	<div class="links">	    
+		    <a href="../aufgabe_9/todo.html" target="_blank">Aufgabe 9</a><div class="flowchart"><a href="../aufgabe_9/flowchart.jpg" target="_blank">Flowchart</a></div>
+	</div>
+		<br>
+	<div class="links">	    
 		    <a href="../aufgabe_8/drumpad.html" target="_blank">Aufgabe 8</a>
 	</div>
 		<br>
