--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,10 @@
     </head>
     <body>
 	<div class="links">	    
+		    <a href="../aufgabe_10/todo-app.html" target="_blank">Aufgabe 10 & 11</a>
+	</div>
+		<br>
+	<div class="links">	    
 		    <a href="../aufgabe_9/todo.html" target="_blank">Aufgabe 9</a><div class="flowchart"><a href="../aufgabe_9/flowchart.jpg" target="_blank">Flowchart</a></div>
 	</div>
 		<br>
