--- a/aufgabe_10/todo-app.html
+++ b/aufgabe_10/todo-app.html
@@ -14,7 +14,11 @@
     <main>
         <h1>ToDo App</h1>
         <p id="counter">3 in total</p>
-        <input id="button" type="button" onclick="startArtyom()" value="Start voice commands"><br><br>
+        <p id="done">3 done</p>
+        <p id="open">3 open</p>
+        <p>
+        <button id="button"><i class="fas fa-microphone"></i> Start voice commands</i></button>
+         <p>Sage zum Beispiel: "Erstelle Aufgabe: EIA erledigen".</p><br><br>
         <div class="inputGroup">
             <input type="text" id="inputTodo" placeholder="Add another task">
             <button id="addButton"><i class="fas fa-plus-circle"></i></button>
